--- a/emotion_engine/emotion_engine_proxy/EmotionEngineProxy.vcxproj.filters
+++ b/emotion_engine/emotion_engine_proxy/EmotionEngineProxy.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\SensorProviderProxy.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="include\SensorProviderProxy.h">
+    <ClInclude Include="include\CEmotionEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\CEmotionEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
